--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'c:\\\\Users\\\\lapto\\\\Text-Summarizer-Project'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,18 +170,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-11-26 17:34:05,108: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-11-26 17:34:05,125: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-11-26 17:34:05,127: INFO: common: created directory at: artifacts]\n",
-      "[2023-11-26 17:34:05,133: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-11-26 17:34:09,278: INFO: 1434958058: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2023-11-27 20:37:43,138: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-11-27 20:37:43,143: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-11-27 20:37:43,146: INFO: common: created directory at: artifacts]\n",
+      "[2023-11-27 20:37:43,151: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-11-27 20:37:47,715: INFO: 1434958058: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 7903594\n",
       "Cache-Control: max-age=300\n",
@@ -192,19 +192,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 6DD8:1AD8B:D92AAD:F240E8:65631110\n",
+      "X-GitHub-Request-Id: 9B98:36ADBB:14132A:157BE0:65648D9A\n",
       "Accept-Ranges: bytes\n",
-      "Date: Sun, 26 Nov 2023 09:34:08 GMT\n",
+      "Date: Mon, 27 Nov 2023 12:37:46 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-nrt-rjtf7700031-NRT\n",
+      "X-Served-By: cache-nrt-rjtf7700027-NRT\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1700991248.442654,VS0,VE452\n",
+      "X-Timer: S1701088666.107198,VS0,VE593\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: bff4630d32b4aee033b7c283cafc1e58b9f6aa71\n",
-      "Expires: Sun, 26 Nov 2023 09:39:08 GMT\n",
+      "X-Fastly-Request-ID: 4d682a5b74525275c67bfbedb936f10bcca2df0b\n",
+      "Expires: Mon, 27 Nov 2023 12:42:46 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
